--- a/css-file/style.css
+++ b/css-file/style.css
@@ -16,6 +16,10 @@ p {
   line-height: 20px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   margin: 0 auto;
   max-width: 1150px;
@@ -44,6 +48,60 @@ p {
   background: #49cc4d;
 }
 
-/* ============= Header section design start ============= */
+/* ======== Navbar design started ======== */
+nav {
+  display: flex;
+  align-items: center;
+  padding: 0 110px;
+  height: 84px;
+  text-align: center;
+  justify-content: space-between;
+}
 
-/* Navbar design started */
+nav ul {
+  display: flex;
+}
+
+nav ul li {
+  list-style: none;
+}
+
+nav ul li a {
+  color: #18191f;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 0 24px;
+  transition: all 0.2s;
+}
+
+nav ul li a:hover {
+  color: #4caf4f;
+  text-decoration: line-through;
+}
+
+.logo {
+  display: flex;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.logo-text {
+  margin-left: 8px;
+}
+
+.login-btn {
+  color: #49cc4d;
+  background: none;
+}
+
+.login-btn:hover {
+  color: #ffff;
+}
+
+/* ============= Header section design start ============= */
+header {
+  background: #f5f7fa;
+}
