--- a/css-file/style.css
+++ b/css-file/style.css
@@ -24,6 +24,10 @@ span {
   color: #4caf4f;
 }
 
+.hide {
+  display: none;
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
@@ -129,4 +133,34 @@ header {
 .banner-right p {
   margin-top: 16px;
   margin-bottom: 32px;
+}
+
+/* ========== Responsive media queries ========== */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  .banner {
+    padding: 0 30px;
+  }
+
+  nav,
+  .banner {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .banner {
+    flex-direction: column;
+  }
+
+  .banner {
+    padding: 0 20px;
+  }
+
+  .banner-left img {
+    width: 100%;
+  }
+
+  nav {
+    display: none;
+  }
 }
