--- a/css-file/style.css
+++ b/css-file/style.css
@@ -281,13 +281,65 @@ header {
   font-weight: 500;
 }
 
+.right-simbol {
+  margin-left: 10px;
+}
+
+/* ============= Marketing section design start ============= */
+.marketing-content {
+  margin: 50px auto;
+  text-align: center;
+}
+
+.m-description {
+  margin: 16px auto;
+  max-width: 630px;
+}
+
+.card-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-text {
+  width: 320px;
+  padding: 20px;
+  border-radius: 8px;
+  background: #f5f7fa;
+  margin: 0 auto;
+  bottom: 90px;
+  position: relative;
+  box-shadow: 0px 8px 16px 0px rgba(171, 190, 209, 0.4);
+}
+
+.card-title {
+  color: #717171;
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 28px;
+  margin-bottom: 24px;
+}
+
+.card-text a {
+  margin: 24px 0;
+}
+
+.card-btn {
+  color: #4caf4f;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 28px;
+}
+
 /* ========== Responsive media queries ========== */
 @media screen and (min-width: 576px) and (max-width: 960px) {
   .banner,
   .client-card-container,
   .unseen-container,
   .helping-content,
-  .customer-all-content {
+  .customer-all-content,
+  .marketing-content {
     padding: 30px;
   }
 
@@ -300,13 +352,15 @@ header {
   .banner,
   .unseen-container,
   .helping-content,
-  .customer-all-content {
+  .customer-all-content,
+  .card-container {
     flex-direction: column;
   }
 
   .helping-content {
     gap: 80px;
   }
+  .marketing-card,
   .unseen-img img {
     max-width: 100%;
   }
@@ -319,7 +373,8 @@ header {
   .banner,
   .helping-content,
   .customer-all-content,
-  .customer-box {
+  .customer-box,
+  .card-container {
     flex-direction: column;
   }
 
@@ -339,7 +394,8 @@ header {
   .client-card-container,
   .unseen-container,
   .helping-content,
-  .customer-all-content {
+  .customer-all-content,
+  .marketing-content {
     padding: 20px;
   }
 
@@ -352,9 +408,22 @@ header {
     gap: 50px;
   }
 
+  .card-text {
+    width: 75%;
+  }
+
+  .card-text a > img {
+    width: 20px;
+  }
+
+  .marketing-card img {
+    width: 90%;
+  }
+
   .customer-image img {
     width: 100%;
   }
+
   .banner-left img {
     width: 100%;
   }
